--- a/repdata/peer2/StormData.Rmd
+++ b/repdata/peer2/StormData.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Impact of Severe Weather Events Across the United States between 1950 and 2011"
 author: "Lawrence C. Chen"
-date: "Friday, May 15, 2015"
+date: "Friday, May 23, 2015"
 output:
   html_document:
     keep_md: yes
@@ -12,26 +12,21 @@ output:
 
 # Synopsis
 
-In 2005, the destructive prower of [Hurricane Katrina](http://en.wikipedia.org/wiki/Hurricane_Katrina) brought an estimated $108 billion damage to properties along central Florida and
-Texas and significant number of human casuality in New Orleans, Louisiana.  
+Although destructive weather events like [Hurricane Katrina](http://en.wikipedia.org/wiki/Hurricane_Katrina)
+and the [Great Flood of 1993](http://en.wikipedia.org/wiki/Great_Flood_of_1993)
+are infrequent, their resulting impact to the population health and damage to
+the economy lasted months to years. A significant root causes that made the
+impact of these events far worse can be attributed to the lack of preparation
+and anticipation.
 
-The [Great Flood of 1993](http://en.wikipedia.org/wiki/Great_Flood_of_1993) along
-the Mississippi and Missouri river last nearly 200 days with damages estimated
-between $15-20 billion.  
+Analyzing records between 1950 and 2011 recorded in the [NOAA Storm Database](http://www.ncdc.noaa.gov/stormevents/ftp.jsp),
+states in the Southeast and Southwest regions are most susceptible to weather
+events commonly associated with wind and water elements such as hurricane, storm
+and and flood, next by weather event associated with ice elements such as heavy
+snow.  However, it is extreme weather events associated to high temperature and
+drought (element heat) that most commonly lead to significant population/crop
+damage and are most harmful to population health.
 
-According to the [NOAA Storm Database](http://www.ncdc.noaa.gov/stormevents/ftp.jsp),
-states in the Southeast and Southwest are most suspectible to severe storm and
-and flood related weather resulting in billions of properties damages. 
-
-* What types of event occurs most frequent
-
-* What types of event causes the greatest amount of damage
-
-* Across the United States, which types of events (as indicated in the EVTYPE
-variable) are most harmful with respect to population health?
-
-* Across the United States, which types of events have the greatest economic
-consequences?
 
 # Loading and preprocessing the raw data
 
@@ -314,7 +309,7 @@ dmg.summary
 dmg.notmapped / dmg.mapped
 ```
 
-**Conclusion:** The process is effective eventhough only `r round(sum(is.na(evmap)) / length(evtype) * 100)`
+**Conclusion:** The process is effective even though only `r round(sum(is.na(evmap)) / length(evtype) * 100)`
 percent of the EVTYPE is mapped.
 
 ### Key weather elements
@@ -359,17 +354,54 @@ dts <- merge(dts, regions, by = 'STATE', all.x = T)
 summary(dts[, c('STATE', 'Region'), with=F])
 ```
 
-# Analysis
+# Results
 
-```{r event freq}
-library(knitr)
+Weather events reported between 1950 and 2011 from the NOAA Storm Database were analyzed for the frequencies of the types of event and the portion of the those
+event actually resulted in either human fatalities, injuries, property damages,
+or corp damages.  The frequencies were further subdivided into regions and sorted
+by event frequencies to aid prioritizing emergency resource and preparation.
 
+Assessments of human causalities and economy impact by region and primary
+weather elements were presented next.  A causality multiplier (lamda = 100) was
+applied to the fatality figures (fatality = 100 injuries) when assessing impact
+too population to health.
+
+## Event frequencies
+
+States in the Southeast regions are most likely to be susceptible to weather
+event linked to wind, water or ice.  States in the Plains were most susceptible
+to events linked to ice.
+
+```{r fig1 event freq}
 colnames(dts)
 
 dts <- dts[, c(1:2, 5, 24:29, 38:43), with=F]
 
 colnames(dts)
 
+library(reshape2)
+library(lattice)
+
+dt1 <- table(dts[, c('Region', 'Element1'), with=F])
+dt1 <- melt(dt1)
+
+poly.colors <- trellis.par.get("superpose.polygon")$col
+poly.colors <- c(poly.colors, 'plum')
+
+barchart(value ~ Element1, data = dt1,
+         main = 'Frequency of Events by Element',
+         groups = Region,
+         beside = T,
+         ylab = 'No. of Occurences',
+         scales=list(x=list(rot = 90)),
+         auto.key=list(x = .05, y=.6, corner = c(0, 0), cex = 0.7),
+         par.settings = list(superpose.polygon = list(col = poly.colors)))
+```
+
+## Frequencies of events with human fatalities by region
+
+```{r}
+library(knitr)
 
 table(dts[(PropDmg + CropDmg) > 0, c('Region', 'Element1'), with=F]) -> dmg.freq
 table(dts[FATALITIES > 0, c('Region', 'Element1'), with=F]) -> ftl.freq
@@ -393,20 +425,28 @@ freq.summary <- function(x) {
 
 # percent of event with human fatalities
 kable(freq.summary(ftl.freq), row.names = F, digits=2)
+```
 
+## Frequencies of events with human injuries by region
+
+```{r}
 # percent of event with human injuries
 kable(freq.summary(inj.freq), row.names = F, digits=2)
+```
 
-# percent of event with property or crop damange
+## Frequencies of events with property or crop damages by region
+
+```{r}
+# percent of event with property or crop damage
 kable(freq.summary(dmg.freq), row.names = F, digits=2)
  
 ```
 
-@@
+## Impact to population health by weather elements and regions
 
-# Results
+Impact from heat was highest among all regions, followed by cold.
 
-```{r fig1 humn}
+```{r fig2 humn}
 library(lattice)
 
 #casuality mulitplier
@@ -428,8 +468,12 @@ bwplot(humn~Element1 | Region , data = dts[humn > 0],
 
 ```
 
+## Impact to the economy by weather elements and regions
 
-```{r fig2 econ}
+Except in Far West and New England states, heat on the average caused the most
+economic damages.
+
+```{r fig3 econ}
 
 bwplot(econ~Element1 | Region, data = dts[econ > 0],
        par.strip.text = list(cex = 0.8),
@@ -441,44 +485,4 @@ bwplot(econ~Element1 | Region, data = dts[econ > 0],
 
 
 ```
-
-
-***
-
-# Assignment Instructions 
-
-The basic goal of this assignment is to explore the NOAA Storm Database and answer some basic questions about severe weather events. You must use the database to answer the questions below and show the code for your entire analysis. Your analysis can consist of tables, figures, or other summaries. You may use any R package you want to support your analysis.
-
-Questions
-
-Your data analysis must address the following questions:
-
-* Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
-
-* Across the United States, which types of events have the greatest economic consequences?
-
-Consider writing your report as if it were to be read by a government or municipal manager who might be responsible for preparing for severe weather events and will need to prioritize resources for different types of events. However, there is no need to make any specific recommendations in your report.
-
-
-##Requirements
-
-###Document Layout
-
-Language: Your document should be written in English.
-
-Title: Your document should have a title that briefly summarizes your data analysis
-
-Synopsis: Immediately after the title, there should be a synopsis which describes and summarizes your analysis in at most 10 complete sentences.
-
-There should be a section titled Data Processing which describes (in words and code) how the data were loaded into R and processed for analysis. In particular, your analysis must start from the raw CSV file containing the data. You cannot do any preprocessing outside the document. If preprocessing is time-consuming you may consider using the cache = TRUE option for certain code chunks.
-
-There should be a section titled Results in which your results are presented.
-
-You may have other sections in your analysis, but Data Processing and Results are required.
-
-The analysis document must have at least one figure containing a plot.
-
-Your analysis must have no more than three figures. Figures may have multiple plots in them (i.e. panel plots), but there cannot be more than three figures total.
-
-You must show all your code for the work in your analysis document. This may make the document a bit verbose, but that is okay. In general, you should ensure that echo = TRUE for every code chunk (this is the default setting in knitr).
 
