--- a/statinf/Part2.Rmd
+++ b/statinf/Part2.Rmd
@@ -75,7 +75,7 @@ at lower dosages.
 
 # Conclusions
 
-* Higher dosage, regardless of the source of vitamin C, suggest providing
+* Higher dosage, regardless of the source of vitamin C, suggests providing
 supplements promotes tooth growth
 * There is no significant difference between using OJ or VC as supplements
 * In order to determine if vitamin C promotes tooth growth, the experiment
