--- a/reg/mtcars.Rmd
+++ b/reg/mtcars.Rmd
@@ -1,45 +1,99 @@
 ---
-title: "mtcars"
+title: "Manual Transmission Cars Deliver Better Fuel Economy"
 author: "Lawrence Chen"
 date: "January 31, 2016"
-output: html_document
+output: pdf_document
 ---
 
 # Synopsis
 
-# Data set
-
-
-## Project
 You work for Motor Trend, a magazine about the automobile industry. Looking
 at a data set of a collection of cars, they are interested in exploring the
 relationship between a set of variables and miles per gallon (MPG) (outcome).
 They are particularly interested in the following two questions:
 
 * Is an automatic or manual transmission better for MPG?
-* Quantify the MPG difference between automatic and manual transmissions 
+* Quantify the MPG difference between automatic and manual transmissions
+
+# Data set
+
+The data was extracted from the 1974 Motor Trend US magazine, and comprises
+fuel consumption and 10 aspects of automobile design and performance for 32
+automobiles (1973–74 models). (see R {datasets} documentation)
+
+```{r data}
+# explicitly load mtcars from {datasets}
+data(mtcars)
+str(mtcars)
+
+mtcars[, c('cyl', 'gear', 'carb')] <- lapply(mtcars[, c('cyl', 'gear', 'carb')], factor)
+mtcars$vs <- factor(mtcars$vs, labels = c('V Engine', 'Straight Engine'))
+mtcars$am <- factor(mtcars$am, labels = c('automatic', 'manual'))
+```
+
+# Exploratory data analyses
+
+The first figure in Appendix suggests that manual transmission provides better
+gas mileage.
+
+The next figure suggests factors such drat, hp, cyl, disp, wt, vs and am have either
+positive or negative correlation with mpg as shown in the next figure.
+
+We will build a multivariable linear model to quantify the effects of these
+variable on gas mileage.
+
+# Model selection and regression analysis
+
+'Backward' stepwise model selection to determine the variable for the best model.
+
+*Note:*  Alternatively, a lengthier bidirectional stepwise selection and AIC
+algorithm would arrive at the same model.
+
+```{r model, results='hide'}
+full.model <- lm(mpg ~ ., data = mtcars)
+best.model <- step(full.model, direction = 'backward')
+```
+
+```{r}
+summary(best.model)
+```
+
+The best model includes the cyl6, cyl8, hp, wt and ammanual variables with
+the overall p-value < .001 with 84% of the variance explained by the final
+model.
+
+The model suggests that mpg decreases with respect to cylinders, horsepower,
+and weight. As the earlier figure suggests mpg increases with respect to
+having a manual transmission.
+
+```{r}
+t.test(mpg ~ am, mtcars)
+```
+
+p <= .001, and therefore accepting the alternative hypothesis that manual
+transmission offer better gas mileage.
+
+# Conclusions
+* The cars with a manual transmission are better for mpg than cars with an automatic transmission
+* The rate of change of the conditional mean mpg with respect to am is about 1.8,
+with 95% confident that this value varies between -1.06 and 4.68. 
+* If the number of cylinders increase from 4 to 8, mpg will decrease by a factor of 3
+
+# Appendix
+```{r}
+boxplot(mpg ~ am, data = mtcars,
+        xlab = 'Transmission', ylab = 'MPG',
+        main = paste0('Fuel Economy of Automatic vs. Manual Transmission\n(n=',
+                      nrow(mtcars), ')'))
+pairs(mtcars)
+
+plot(best.model)
+
+plot(best.model, which=c(4,6))
+```
 
 
-## Requirement
-Take the mtcars data set and write up an analysis to answer their question
-using regression models and exploratory data analyses:
+---
 
-* Written PDF printout of a compiled (using knitr) R markdown document
-* Brief. Roughly the equivalent of 2 pages or less for the main text. Supporting figures in an appendix can be included up to 5 total pages including the 2 for the main report. The appendix can only include figures
-* Include a first paragraph executive summary
+*Note:* See https://github.com/lawrence009/jhudatascience/tree/master/statinf for the source Rmd.
 
-# Peer Grading
-* The criteria that your classmates will use to evaluate and grade your work are shown below
-* Each criteria is binary: (1 point = criteria met acceptably; 0 points = criteria not met acceptably)
-* our Course Project score will be the sum of the points and will count as 40% of your final grade in the course
-
-# Criteria
-1. Did the student interpret the coefficients correctly?
-2. Did the student do some exploratory data analyses?
-3. Did the student fit multiple models and detail their strategy for model selection?
-4. Did the student answer the questions of interest or detail why the question(s) is (are) not answerable?
-5. Did the student do a residual plot and some diagnostics?
-6. Did the student quantify the uncertainty in their conclusions and/or perform an inference correctly?
-7. Was the report brief (about 2 pages long) for the main body of the report and no longer than 5 with supporting appendix of figures?
-8. Did the report include an executive summary?
-9. Was the report done in Rmd (knitr)? 
